# cookiecutter-python

./: .gitignore  README.md  bootstrap.sh  cookiecutter.json
.claude/: settings.local.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .coveragerc  .dockerignore  .env.sample  .gitignore  .hadolint.yaml  .markdownlint.json  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  .secret.sample  .yamllint.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml  pyrefly.toml  pyrightconfig.json  pytest.ini  ty.toml
{{cookiecutter.project_slug}}/.github/: PULL_REQUEST_TEMPLATE.md
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug.yaml  config.yml  feature_request.yaml  task.yaml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  pypi.yml
{{cookiecutter.project_slug}}/alembic/: env.py  script.py.mako
{{cookiecutter.project_slug}}/environments/container/: Dockerfile
{{cookiecutter.project_slug}}/environments/environment/: .env.template
{{cookiecutter.project_slug}}/playbook/: getting-started.md  index.md  myst.yml
{{cookiecutter.project_slug}}/scripts/: clean.sh  release.sh  tree.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_placeholder.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __main__.py  cli.py  db.py  main.py
