[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = [{name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}]
readme = "README.md"
license = {text = "{{ cookiecutter.license }}"}
requires-python = ">={{ cookiecutter.python_version }}"
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: {{ cookiecutter.license }} License",
    "Programming Language :: Python :: {{ cookiecutter.python_version }}",
    "Typing :: Typed",
]

dependencies = [
{%- if cookiecutter.use_pydantic %}
    "pydantic~=2.13",
    "pydantic-settings~=2.13",
{%- endif %}
{%- if cookiecutter.use_fastapi %}
    "fastapi[standard]~=0.136",
    "uvicorn~=0.44",
{%- endif %}
{%- if cookiecutter.use_database %}
    "sqlalchemy~=2.0",
    "sqlmodel~=0.0.38",
    "alembic~=1.18",
    "asyncpg~=0.31",
{%- endif %}
{%- if cookiecutter.use_cli %}
    "typer~=0.24",
    "rich~=15.0",
{%- endif %}
]

[dependency-groups]
lint = [
    "bandit~=1.9",
    "commitizen~=4.13",
    "pre-commit~=4.5",
    "ruff~=0.15",
    "yamllint~=1.38",
]

type = [
    "mypy~=1.20",
    "pyright~=1.1.408",
    "ty~=0.0.31",
    "pyrefly~=0.61",
    "types-pyyaml~=6.0.12",
]

test = [
    "coverage~=7.13",
    "hypothesis>=6.152",
    "pytest~=9.0",
    "pytest-asyncio~=1.3",
    "pytest-benchmark~=5.2",
    "pytest-cov~=7.1",
    "pytest-memray>=1.8; sys_platform != 'win32'",
    "pytest-mock~=3.15",
    "pytest-xdist~=3.8",
    "testcontainers>=4.14",
]
{% if cookiecutter.use_jupyter_book %}

docs = [
    "jupyter-book~=2.1",
]
{% endif %}

dev = [
    {include-group = "lint"},
    {include-group = "type"},
    {include-group = "test"},
{%- if cookiecutter.use_jupyter_book %}
    {include-group = "docs"},
{%- endif %}
]

{% if cookiecutter.use_cli  %}
[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.package_name }}.cli:app"
{% endif %}

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
Repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
Issues = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"

[tool.hatch.build.targets.wheel]
packages = ["{{ cookiecutter.package_name }}"]

[tool.uv]
managed = true

[tool.bandit]
exclude_dirs = [".eggs", ".git", ".hg", ".mypy_cache", ".tox", "venv", ".venv", "build", "dist"]

# Note: pytest, ty, and pyrefly configurations are in separate files:
# - pytest.ini
# - ty.toml
# - pyrefly.toml
