[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_name }}"
authors = [{name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}]
readme = "README.md"
license = {text = "{{ cookiecutter.license }}"}
requires-python = ">={{ cookiecutter.python_version }}"
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: {{ cookiecutter.license }} License",
    "Programming Language :: Python :: {{ cookiecutter.python_version }}",
    "Typing :: Typed",
]

dependencies = [
    "pydantic~=2.12",
    "pydantic-settings~=2.13",
{%- if cookiecutter.use_fastapi %}
    "fastapi[standard]~=0.135",
    "uvicorn~=0.43",
{%- endif %}
{%- if cookiecutter.use_database %}
    "sqlalchemy~=2.0",
    "sqlmodel~=0.0",
    "alembic~=1.18",
    "asyncpg~=0.31",
{%- endif %}
{%- if cookiecutter.use_cli %}
    "typer~=0.24",
    "rich~=14.3",
{%- endif %}
]

[dependency-groups]
lint = [
    "bandit~=1.9",
    "commitizen~=4.13",
    "pre-commit~=4.5",
    "ruff~=0.15",
    "yamllint~=1.38",
]

type = [
    "mypy~=1.20",
    "pyright~=1.1.408",
    "ty~=0.0.28",
    "pyrefly~=0.59",
    "types-pyyaml~=6.0.12",
]

test = [
    "coverage~=7.13",
    "hypothesis>=6.130",
    "pytest~=9.0",
    "pytest-asyncio~=1.3",
    "pytest-benchmark~=5.1",
    "pytest-cov~=7.1",
    "pytest-memray>=1.8; sys_platform != 'win32'",
    "pytest-mock~=3.15",
    "pytest-xdist~=3.8",
    "testcontainers>=4.0",
]
{% if cookiecutter.use_jupyter_book %}

docs = [
    "jupyter-book~=2.1",
]
{% endif %}

dev = [
    {include-group = "lint"},
    {include-group = "type"},
    {include-group = "test"},
{%- if cookiecutter.use_jupyter_book %}
    {include-group = "docs"},
{%- endif %}
]

{% if cookiecutter.use_cli  %}
[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.package_name }}.cli:app"
{% endif %}

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
Repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
Issues = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"

[tool.hatch.build.targets.wheel]
packages = ["{{ cookiecutter.package_name }}"]

[tool.uv]
managed = true

[tool.bandit]
exclude_dirs = [".eggs", ".git", ".hg", ".mypy_cache", ".tox", "venv", ".venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
xfail_strict = true
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov={{ cookiecutter.package_name }}",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "memory: marks tests that check memory usage",
    "benchmark: marks performance benchmark tests",
]

# ==============================================================================
# ty - Astral's fast type checker (experimental)
# https://docs.astral.sh/ty/
# ==============================================================================
[tool.ty.environment]
python-version = "{{ cookiecutter.python_version }}"
python = ".venv"
root = ["{{ cookiecutter.package_name }}", "tests"]

[tool.ty.src]
include = ["{{ cookiecutter.package_name }}", "tests"]
exclude = [
    ".venv/**",
    ".git/**",
    "__pycache__/**",
    "*.pyc",
    ".mypy_cache/**",
    ".pytest_cache/**",
    ".ruff_cache/**",
    "dist/**",
    "build/**",
]

[tool.ty.rules]
unresolved-reference = "error"
possibly-unresolved-reference = "error"
invalid-assignment = "error"
invalid-argument-type = "error"
invalid-return-type = "error"
call-non-callable = "error"
missing-argument = "error"
too-many-positional-arguments = "error"
unknown-argument = "error"
unsupported-operator = "error"
invalid-type-form = "error"
invalid-type-variable-constraints = "error"
invalid-legacy-type-variable = "error"

[tool.ty.terminal]
output-format = "full"
error-on-warning = false

[[tool.ty.overrides]]
include = ["tests/**", "**/test_*.py", "**/*_test.py"]

[tool.ty.overrides.rules]
possibly-unresolved-reference = "warn"
unused-ignore-comment = "warn"

# ==============================================================================
# Pyrefly - Facebook's fast type checker
# https://pyrefly.org/en/docs/configuration/
# ==============================================================================
[tool.pyrefly]
project-includes = ["{{ cookiecutter.package_name }}", "tests"]
project-excludes = [
    ".venv/**",
    ".git/**",
    "__pycache__/**",
    "dist/**",
    "build/**",
]
python-version = "{{ cookiecutter.python_version }}"
check-unannotated-defs = true
min-severity = "error"
output-format = "full-text"

[tool.pyrefly.errors]
# Core type errors
bad-assignment = true
bad-return = true
bad-argument-type = true
bad-argument-count = true
bad-keyword-argument = true
missing-argument = true
unexpected-keyword = true
unexpected-positional-argument = true
not-callable = true
# Type system
invalid-annotation = true
invalid-type-alias = true
invalid-type-var = true
invalid-inheritance = true
bad-override = true
bad-specialization = true
# Import & name resolution
missing-import = true
unbound-name = true
unknown-name = true
missing-attribute = true
missing-module-attribute = true
# Other strictness
bad-unpacking = true
bad-instantiation = true
bad-index = true
not-iterable = true
unsupported-operation = true
redundant-cast = true
unused-ignore = true
